fix broken styles due to unneeded quotes

--- a/src/styles/WebBrowserWindow.module.css
+++ b/src/styles/WebBrowserWindow.module.css
@@ -1,30 +1,30 @@
 .tagline {
-  text-align: 'center';
-  margin: '1rem';
+  text-align: center;
+  margin: 1rem;
 }
 
 .outsideContainer {
-  margin: '0 auto';
-  width: '100%';
-  display: 'flex';
-  justify-content: 'center';
-  align-items: 'center';
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .windowTopBar {
-  display: 'flex';
-  justify-content: 'space-between';
-  align-items: 'center';
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .browserNameText {
-  margin-bottom: '0';
-  flex: '0 0 auto';
+  margin-bottom: 0;
+  flex: 0 0 auto;
 }
 
 .windowControlIcons {
-  display: 'flex';
-  justify-content: 'space-between';
-  width: '15%';
-  min-width: '4rem';
+  display: flex;
+  justify-content: space-between;
+  width: 15%;
+  min-width: 4rem;
 }
